Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -556,6 +556,33 @@
     ]
   },
   {
+    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
+    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
+    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
+    "answers": [
+      {
+        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây là hành vi hợp pháp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu có tai nạn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xu hướng đáng lo khi các nhà bán lẻ mỹ phẩm nhắm đến trẻ vị thành niên",
     "content": "Xu hướng các nhà bán lẻ mỹ phẩm nhắm đến trẻ vị thành niên từ 10 đến 15 tuổi đang gia tăng, gây lo ngại cho các bác sĩ da liễu. Họ cảnh báo rằng việc tiếp xúc với các sản phẩm chăm sóc da không chỉ có thể gây hại cho làn da mà còn ảnh hưởng đến sức khỏe tâm thần của trẻ. Các sản phẩm này thường chứa nhiều hóa chất độc hại mà không được kiểm soát chặt chẽ, và việc tiếp thị mạnh mẽ trên mạng xã hội càng làm tăng áp lực cho trẻ em về hình ảnh bản thân.",
     "link": "https://tuoitre.vn/xu-huong-dang-lo-khi-cac-nha-ban-le-my-pham-nham-den-tre-vi-thanh-nien-20250325091431479.htm",
@@ -3806,33 +3833,6 @@
     ]
   },
   {
-    "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
-    "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
-    "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao việc duy trì khoảng cách an toàn trên đường cao tốc là quan trọng?",
-    "answers": [
-      {
-        "text": "Để tránh tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ lái xe.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn trong xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mụn lưng có thể chữa khỏi không?",
     "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
     "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
@@ -3855,6 +3855,33 @@
       },
       {
         "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
+    "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
+    "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao việc duy trì khoảng cách an toàn trên đường cao tốc là quan trọng?",
+    "answers": [
+      {
+        "text": "Để tránh tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ lái xe.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn trong xe.",
         "correct": false
       }
     ]
@@ -5143,32 +5170,28 @@
     ]
   },
   {
-    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
-    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
-    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 3,
     "importance": 8,
-    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
     "answers": [
       {
-        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
         "correct": true
       },
       {
-        "text": "Đi bộ không đủ nhanh",
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
         "correct": false
       },
       {
-        "text": "Không mang giày thể thao",
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
         "correct": false
       },
       {
-        "text": "Đi bộ trong thời gian ngắn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
@@ -5228,28 +5251,32 @@
     ]
   },
   {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
+    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
+    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
     "cat": "suc-khoe",
-    "positivity": 3,
+    "positivity": 7,
     "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
     "answers": [
       {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
         "correct": true
       },
       {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "text": "Đi bộ không đủ nhanh",
         "correct": false
       },
       {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "text": "Không mang giày thể thao",
         "correct": false
       },
       {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
+        "text": "Đi bộ trong thời gian ngắn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
         "correct": false
       }
     ]
@@ -5474,33 +5501,6 @@
       },
       {
         "text": "Số bàn thắng ghi được cho Real Madrid nhiều nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Subaru Forester và Volkswagen Tiguan đua giảm giá trăm triệu đồng",
-    "content": "Trong tháng 3/2025, hai mẫu xe CUV cỡ C là Subaru Forester và Volkswagen Tiguan đã giảm giá từ 140 đến 200 triệu đồng nhằm kích cầu tiêu dùng. Cụ thể, Subaru Forester có giá bán ưu đãi từ 829 triệu đồng đến 999 triệu đồng tùy phiên bản, trong khi Volkswagen Tiguan hỗ trợ 100% lệ phí trước bạ với giá bán khoảng 1,688 tỷ đồng. Mức giảm giá mạnh này không phải là lần đầu tiên diễn ra và được áp dụng cho các mẫu xe có năm sản xuất 2024, giúp tăng tính thanh khoản và giảm áp lực tồn kho cho đại lý.",
-    "link": "https://vnexpress.net/subaru-forester-va-volkswagen-tiguan-dua-giam-gia-tram-trieu-dong-4864934.html",
-    "cat": "oto-xe-may",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Subaru Forester và Volkswagen Tiguan lại giảm giá mạnh trong tháng 3/2025?",
-    "answers": [
-      {
-        "text": "Để kích cầu tiêu dùng và giảm áp lực tồn kho.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng giá bán xe.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm số lượng xe trong kho.",
-        "correct": false
-      },
-      {
-        "text": "Để cạnh tranh với các mẫu xe khác.",
         "correct": false
       }
     ]
