Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Cua Cà Mau bị thiệt hại do giáp xác chân tơ",
+    "content": "Cua Cà Mau đang đối mặt với thiệt hại do nhiễm ký sinh trùng giáp xác chân tơ, dẫn đến tình trạng cua chết hàng loạt và giảm thu nhập cho người nuôi. Tại huyện Năm Căn, tỷ lệ cua chết giảm khoảng 15-20% so với năm trước, tuy nhiên vẫn gây ảnh hưởng lớn đến sản xuất. Ngành chức năng khuyến cáo nông dân tạm dừng thả giống và cải tạo ao nuôi để ngăn ngừa mầm bệnh.",
+    "link": "https://tuoitre.vn/cua-ca-mau-bi-thiet-hai-do-giap-xac-chan-to-20250325104543797.htm",
+    "cat": "kinh-doanh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao cua Cà Mau bị thiệt hại nặng nề?",
+    "answers": [
+      {
+        "text": "Do nhiễm ký sinh trùng giáp xác chân tơ",
+        "correct": true
+      },
+      {
+        "text": "Do chất lượng nước kém",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết xấu",
+        "correct": false
+      },
+      {
+        "text": "Do lạm dụng thuốc trừ sâu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Được hoãn thi hành án vì có con nhỏ, trốn sang Campuchia thì bị bắt",
     "content": "Phan Ngọc Yến, 39 tuổi, đã bị bắt khi đang cố gắng trốn sang Campuchia trong thời gian được hoãn thi hành án vì có con nhỏ dưới 36 tháng tuổi. Yến đang bị Công an tỉnh Đồng Tháp truy nã về tội mua bán trái phép chất ma túy. Cô đã bị lực lượng biên phòng phát hiện và bắt giữ khi đang xuất cảnh trái phép vào chiều ngày 24-3.",
     "link": "https://tuoitre.vn/duoc-hoan-thi-hanh-an-vi-co-con-nho-tron-sang-campuchia-thi-bi-bat-20250325101648668.htm",
@@ -238,6 +265,37 @@
       },
       {
         "text": "Lê Thị C",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Silicon vón cục đẩy lên lưng sau chi 50 triệu nâng vòng ba",
+    "content": "Một người phụ nữ 31 tuổi đã chi 50 triệu đồng để nâng mông bằng silicon tại một cơ sở thẩm mỹ. Sau khi thực hiện, cô gặp phải tình trạng đau đớn ở vùng mông và lưng do silicon vón cục, phải trải qua hai lần phẫu thuật để nạo hút chất này. Bác sĩ cảnh báo rằng việc tiêm silicon lỏng đã bị cấm từ năm 1995 do gây nhiều biến chứng nguy hiểm, và khuyến cáo mọi người nên chọn cơ sở thẩm mỹ uy tín.",
+    "link": "https://vnexpress.net/silicon-von-cuc-day-len-lung-sau-chi-50-trieu-nang-vong-ba-4865444.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Người phụ nữ đã gặp phải vấn đề gì sau khi nâng mông bằng silicon?",
+    "answers": [
+      {
+        "text": "Vón cục silicon gây đau ở mông và lưng",
+        "correct": true
+      },
+      {
+        "text": "Không có vấn đề gì",
+        "correct": false
+      },
+      {
+        "text": "Vòng một bị vón cục",
+        "correct": false
+      },
+      {
+        "text": "Da bị nhiễm trùng",
+        "correct": false
+      },
+      {
+        "text": "Không cần phẫu thuật",
         "correct": false
       }
     ]
@@ -2863,6 +2921,33 @@
     ]
   },
   {
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "answers": [
+      {
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ người dân mới được hưởng lợi.",
+        "correct": false
+      },
+      {
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "correct": false
+      },
+      {
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyết áp của bạn có bình thường không?",
     "content": "Huyết áp có thể bị ảnh hưởng bởi nhiều yếu tố như lối sống, cân nặng và giấc ngủ. Việc điều chỉnh những yếu tố này có thể giúp huyết áp trở về mức bình thường. Tuy nhiên, cũng có những nguyên nhân khác có thể dẫn đến tình trạng huyết áp cao bất thường. Do đó, việc theo dõi và kiểm tra huyết áp thường xuyên là rất quan trọng.",
     "link": "https://vnexpress.net/huyet-ap-cua-ban-co-binh-thuong-khong-4865191.html",
@@ -2997,33 +3082,6 @@
       },
       {
         "text": "Anh ấy không làm gì cả.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
-    "answers": [
-      {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ người dân mới được hưởng lợi.",
-        "correct": false
-      },
-      {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
-        "correct": false
-      },
-      {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
         "correct": false
       }
     ]
@@ -3883,33 +3941,6 @@
     ]
   },
   {
-    "title": "Mụn lưng có thể chữa khỏi không?",
-    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
-    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mụn lưng có thể chữa khỏi được không?",
-    "answers": [
-      {
-        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, mụn lưng không bao giờ khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
     "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
     "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
@@ -3932,6 +3963,33 @@
       },
       {
         "text": "Để giảm tiếng ồn trong xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
@@ -5049,33 +5107,6 @@
       },
       {
         "text": "Cao tốc Thái Nguyên - Bắc Kạn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chung tay bảo vệ thương hiệu gạo Việt",
-    "content": "Trong bối cảnh thương hiệu gạo Việt Nam, đặc biệt là gạo ST25, đang bị làm giả và nhái bao bì, nhiều doanh nghiệp trong ngành lúa gạo đã kêu gọi các cơ quan chức năng tăng cường xử lý nghiêm các hành vi này. Các doanh nghiệp cho rằng việc làm giả không chỉ gây thiệt hại cho họ mà còn ảnh hưởng đến uy tín của thương hiệu gạo Việt Nam. Để bảo vệ thương hiệu, các doanh nghiệp cần xây dựng thương hiệu rõ ràng và hợp tác với cơ quan chức năng trong việc xử lý hàng giả.",
-    "link": "https://tuoitre.vn/chung-tay-bao-ve-thuong-hieu-gao-viet-20250324081127455.htm",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao việc bảo vệ thương hiệu gạo Việt Nam lại quan trọng?",
-    "answers": [
-      {
-        "text": "Để ngăn chặn hàng giả và bảo vệ uy tín thương hiệu.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng giá gạo xuất khẩu.",
-        "correct": false
-      },
-      {
-        "text": "Để cải thiện năng suất trồng lúa.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm chi phí sản xuất.",
         "correct": false
       }
     ]
