--- a/home.html
+++ b/home.html
@@ -345,6 +345,33 @@
     ]
   },
   {
+    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
+    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
+    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Phẫu thuật thay van hai lá nhân tạo",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống thuốc kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Điều trị bằng thuốc đông y",
+        "correct": false
+      },
+      {
+        "text": "Không cần điều trị gì cả",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bé sơ sinh tắc ruột",
     "content": "Bé Minh, một trong hai bé song sinh, bị tắc ruột do dị ứng sữa công thức và phải nhập viện cấp cứu. Sau khi được điều trị, bác sĩ đã thực hiện phẫu thuật mở hậu môn tạm và sau một tháng, bé được phẫu thuật đóng lại. Tắc ruột ở trẻ sơ sinh là tình trạng cần được cấp cứu kịp thời, thường do lồng ruột hoặc các vấn đề khác về tiêu hóa. Các bác sĩ khuyến cáo nên cho trẻ bú sữa mẹ hoàn toàn trong 6 tháng đầu đời để giảm nguy cơ tắc ruột.",
     "link": "https://vnexpress.net/be-so-sinh-tac-ruot-4865383.html",
@@ -371,33 +398,6 @@
       },
       {
         "text": "Tiêu chảy cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
-    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
-    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Phẫu thuật thay van hai lá nhân tạo",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống thuốc kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Điều trị bằng thuốc đông y",
-        "correct": false
-      },
-      {
-        "text": "Không cần điều trị gì cả",
         "correct": false
       }
     ]
@@ -789,6 +789,33 @@
     ]
   },
   {
+    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
+    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
+    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
+    "answers": [
+      {
+        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây là hành vi hợp pháp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu có tai nạn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thói quen thường gặp khiến bạn đau lưng?",
     "content": "Nhiều thói quen sinh hoạt hàng ngày có thể là nguyên nhân gây ra hoặc làm nặng thêm tình trạng đau lưng. Những thói quen này bao gồm việc ngồi lâu, không duy trì tư thế đúng khi làm việc, và thiếu luyện tập thể dục. Việc nhận biết và điều chỉnh những thói quen này có thể giúp cải thiện tình trạng sức khỏe lưng của bạn.",
     "link": "https://vnexpress.net/thoi-quen-thuong-gap-khien-ban-dau-lung-4865482.html",
@@ -815,33 +842,6 @@
       },
       {
         "text": "Uống nhiều nước",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
-    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
-    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
-    "answers": [
-      {
-        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây là hành vi hợp pháp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu có tai nạn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
         "correct": false
       }
     ]
@@ -1597,33 +1597,6 @@
     ]
   },
   {
-    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
-    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
-    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
-    "answers": [
-      {
-        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
-        "correct": true
-      },
-      {
-        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
-        "correct": false
-      },
-      {
-        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
     "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
     "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
@@ -1646,6 +1619,33 @@
       },
       {
         "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
+    "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
+    "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đề xuất mới của Bộ Quốc phòng về mức đóng BHXH bắt buộc cho học viên quân đội có gì thay đổi?",
+    "answers": [
+      {
+        "text": "Mức đóng BHXH sẽ tăng dần từ 2 lần mức tham chiếu trong hai năm đầu.",
+        "correct": true
+      },
+      {
+        "text": "Mức đóng BHXH sẽ được giữ nguyên như hiện tại.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ giảm xuống còn 1 lần mức tham chiếu.",
+        "correct": false
+      },
+      {
+        "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
         "correct": false
       }
     ]
@@ -1883,37 +1883,6 @@
     ]
   },
   {
-    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
-    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
-    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Từ tháng 4 đến tháng 10 năm 2025",
-        "correct": true
-      },
-      {
-        "text": "Từ tháng 1 đến tháng 6 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 7 đến tháng 12 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 3 đến tháng 9 năm 2024",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 5 đến tháng 10 năm 2023",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
     "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
     "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
@@ -1963,6 +1932,37 @@
       },
       {
         "text": "Đại học Yale và Đại học Princeton",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
+    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
+    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Từ tháng 4 đến tháng 10 năm 2025",
+        "correct": true
+      },
+      {
+        "text": "Từ tháng 1 đến tháng 6 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 7 đến tháng 12 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 3 đến tháng 9 năm 2024",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 5 đến tháng 10 năm 2023",
         "correct": false
       }
     ]
@@ -2102,6 +2102,37 @@
       },
       {
         "text": "Vì chính quyền Ukraine không có kế hoạch hòa bình.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Giảm 16 cm vòng eo, người phụ nữ 'lột xác'",
+    "content": "Chị Lê Thị Sủi, 35 tuổi, đã giảm 16 cm vòng eo và cải thiện vóc dáng nhờ chế độ dinh dưỡng khoa học và tập luyện đều đặn 6 buổi mỗi tuần. Sau khi trải qua quá trình giảm cân, chị không chỉ có vòng eo từ 79 cm xuống 63 cm mà còn trở thành huấn luyện viên dinh dưỡng và thể hình, truyền cảm hứng cho nhiều người. Sự thay đổi này không chỉ cải thiện sức khỏe mà còn mang lại cho chị sự tự tin và hạnh phúc trong cuộc sống.",
+    "link": "https://vnexpress.net/giam-16-cm-vong-eo-nguoi-phu-nu-lot-xac-4864021.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Lê Thị Sủi đã giảm bao nhiêu cm vòng eo?",
+    "answers": [
+      {
+        "text": "16 cm",
+        "correct": true
+      },
+      {
+        "text": "10 cm",
+        "correct": false
+      },
+      {
+        "text": "12 cm",
+        "correct": false
+      },
+      {
+        "text": "14 cm",
+        "correct": false
+      },
+      {
+        "text": "18 cm",
         "correct": false
       }
     ]
