Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,37 @@
     ]
   },
   {
+    "title": "7 món ăn màu tím có lợi cho sức khỏe tinh thần",
+    "content": "Bài viết giới thiệu bảy món ăn màu tím như cà tím, bắp cải tím, mận, và hành tím, đều chứa nhiều chất chống oxy hóa anthocyanin và có lợi cho sức khỏe tinh thần. Những thực phẩm này không chỉ hỗ trợ giấc ngủ, cải thiện sức khỏe thể chất mà còn giúp tăng cường chức năng nhận thức và giảm nguy cơ mắc các bệnh thoái hóa thần kinh. Ngoài ra, các món ăn màu tím còn giàu vitamin và khoáng chất như kali, magie, và có khả năng chống viêm và chống ung thư.",
+    "link": "https://vnexpress.net/7-mon-an-mau-tim-co-loi-cho-suc-khoe-tinh-than-4865474.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Những món ăn màu tím nào có lợi cho sức khỏe tinh thần?",
+    "answers": [
+      {
+        "text": "Cà tím, bắp cải tím, mận, hành tím",
+        "correct": true
+      },
+      {
+        "text": "Khoai tay vàng",
+        "correct": false
+      },
+      {
+        "text": "Cà rốt",
+        "correct": false
+      },
+      {
+        "text": "Bí đỏ",
+        "correct": false
+      },
+      {
+        "text": "Dưa hấu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Andreeva bị nguyền rủa sau một trận thua ở Miami Mở rộng",
     "content": "Tay vợt Mirra Andreeva, 17 tuổi, đã bị lăng mạ và nguyền rủa sau khi thua trận ở vòng ba Miami Mở rộng. Cô chia sẻ một tin nhắn đe dọa từ một CĐV trên mạng xã hội, trong đó có lời chúc nặng nề về sức khỏe. Sự việc diễn ra sau khi Andreeva cảm thấy không hài lòng với cách mà đối thủ Anisimova xử lý chấn thương trong trận đấu. Tình trạng lăng mạ trên mạng xã hội đối với các tay vợt, đặc biệt là nữ, ngày càng gia tăng, và Andreeva không phải là trường hợp đầu tiên gặp phải điều này.",
     "link": "https://vnexpress.net/andreeva-bi-nguyen-rua-sau-mot-tran-thua-o-miami-mo-rong-4865592.html",
@@ -1340,6 +1371,33 @@
     ]
   },
   {
+    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
+    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
+    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
+    "answers": [
+      {
+        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây là hành vi hợp pháp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu có tai nạn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thói quen thường gặp khiến bạn đau lưng?",
     "content": "Nhiều thói quen sinh hoạt hàng ngày có thể là nguyên nhân gây ra hoặc làm nặng thêm tình trạng đau lưng. Những thói quen này bao gồm việc ngồi lâu, không duy trì tư thế đúng khi làm việc, và thiếu luyện tập thể dục. Việc nhận biết và điều chỉnh những thói quen này có thể giúp cải thiện tình trạng sức khỏe lưng của bạn.",
     "link": "https://vnexpress.net/thoi-quen-thuong-gap-khien-ban-dau-lung-4865482.html",
@@ -1366,33 +1424,6 @@
       },
       {
         "text": "Uống nhiều nước",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
-    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
-    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
-    "answers": [
-      {
-        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây là hành vi hợp pháp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu có tai nạn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
         "correct": false
       }
     ]
@@ -1951,33 +1982,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
-    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
-    "answers": [
-      {
-        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
-        "correct": true
-      },
-      {
-        "text": "Nốt ruồi có màu nâu đồng nhất.",
-        "correct": false
-      },
-      {
-        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
-        "correct": false
-      },
-      {
-        "text": "Nốt ruồi không thay đổi theo thời gian.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
     "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
     "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
@@ -2000,6 +2004,33 @@
       },
       {
         "text": "Là một khu đô thị nhỏ với ít tiện ích.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
+    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
+    "answers": [
+      {
+        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
+        "correct": true
+      },
+      {
+        "text": "Nốt ruồi có màu nâu đồng nhất.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi không thay đổi theo thời gian.",
         "correct": false
       }
     ]
@@ -2121,33 +2152,6 @@
     ]
   },
   {
-    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
-    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
-    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
-    "answers": [
-      {
-        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
-        "correct": true
-      },
-      {
-        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
-        "correct": false
-      },
-      {
-        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
     "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
     "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
@@ -2170,6 +2174,33 @@
       },
       {
         "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
+    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
+    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
+    "answers": [
+      {
+        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
+        "correct": true
+      },
+      {
+        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
+        "correct": false
+      },
+      {
+        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
         "correct": false
       }
     ]
@@ -2380,28 +2411,28 @@
     ]
   },
   {
-    "title": "6 năm vừa làm vừa học, chàng trai 9X ẵm trọn học bổng tiến sĩ 15 tỷ đồng",
-    "content": "Đặng Võ Hiệp, chàng trai 9X đến từ TP.HCM, đã xuất sắc giành học bổng tiến sĩ toàn phần trị giá 15 tỷ đồng từ Đại học Virginia và Đại học Missouri (Mỹ) sau 6 năm vừa làm vừa học. Trước đó, Hiệp đã có hai tấm bằng thạc sĩ từ Anh và Mỹ, cùng với kinh nghiệm làm việc trong lĩnh vực phân tích dữ liệu. Hướng nghiên cứu của Hiệp tập trung vào ứng dụng trí tuệ nhân tạo và học máy trong việc dự đoán thời tiết cực đoan và phòng tránh thiên tai.",
-    "link": "https://dantri.com.vn/giao-duc/6-nam-vua-lam-vua-hoc-chang-trai-9x-am-tron-hoc-bong-tien-si-15-ty-dong-20250323204410785.htm",
-    "cat": "giao-duc",
-    "positivity": 10,
-    "importance": 9,
-    "question": "Đặng Võ Hiệp đã nhận học bổng tiến sĩ từ đâu?",
+    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
+    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
+    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
     "answers": [
       {
-        "text": "Đại học Virginia và Đại học Missouri",
+        "text": "400 chiếc bánh đặc sản và rau củ quả",
         "correct": true
       },
       {
-        "text": "Đại học Harvard và Đại học Stanford",
+        "text": "1000 chiếc bánh mì",
         "correct": false
       },
       {
-        "text": "Đại học Oxford và Đại học Cambridge",
+        "text": "500 hoa tươi",
         "correct": false
       },
       {
-        "text": "Đại học Yale và Đại học Princeton",
+        "text": "300 chai rượu",
         "correct": false
       }
     ]
@@ -2429,6 +2460,33 @@
       },
       {
         "text": "Vì chúng có giá rẻ hơn xe châu Âu.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 năm vừa làm vừa học, chàng trai 9X ẵm trọn học bổng tiến sĩ 15 tỷ đồng",
+    "content": "Đặng Võ Hiệp, chàng trai 9X đến từ TP.HCM, đã xuất sắc giành học bổng tiến sĩ toàn phần trị giá 15 tỷ đồng từ Đại học Virginia và Đại học Missouri (Mỹ) sau 6 năm vừa làm vừa học. Trước đó, Hiệp đã có hai tấm bằng thạc sĩ từ Anh và Mỹ, cùng với kinh nghiệm làm việc trong lĩnh vực phân tích dữ liệu. Hướng nghiên cứu của Hiệp tập trung vào ứng dụng trí tuệ nhân tạo và học máy trong việc dự đoán thời tiết cực đoan và phòng tránh thiên tai.",
+    "link": "https://dantri.com.vn/giao-duc/6-nam-vua-lam-vua-hoc-chang-trai-9x-am-tron-hoc-bong-tien-si-15-ty-dong-20250323204410785.htm",
+    "cat": "giao-duc",
+    "positivity": 10,
+    "importance": 9,
+    "question": "Đặng Võ Hiệp đã nhận học bổng tiến sĩ từ đâu?",
+    "answers": [
+      {
+        "text": "Đại học Virginia và Đại học Missouri",
+        "correct": true
+      },
+      {
+        "text": "Đại học Harvard và Đại học Stanford",
+        "correct": false
+      },
+      {
+        "text": "Đại học Oxford và Đại học Cambridge",
+        "correct": false
+      },
+      {
+        "text": "Đại học Yale và Đại học Princeton",
         "correct": false
       }
     ]
@@ -2487,33 +2545,6 @@
       },
       {
         "text": "Chỉ gây nghiện và không gây ung thư",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
-    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
-    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
-    "answers": [
-      {
-        "text": "400 chiếc bánh đặc sản và rau củ quả",
-        "correct": true
-      },
-      {
-        "text": "1000 chiếc bánh mì",
-        "correct": false
-      },
-      {
-        "text": "500 hoa tươi",
-        "correct": false
-      },
-      {
-        "text": "300 chai rượu",
         "correct": false
       }
     ]
